--- a/index.html
+++ b/index.html
@@ -4,155 +4,153 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Keberadaan Guru & Staf - KV Klang</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;500;600&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&family=Roboto&display=swap">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
+      font-family: 'Google Sans', 'Roboto', Arial, sans-serif;
     }
     body {
-      background: linear-gradient(135deg, #f0f4f8 0%, #e2e8f0 100%);
-      color: #1e293b;
+      background-color: #f8f9fa;
+      color: #202124;
       min-height: 100vh;
-      padding: 20px;
+      padding: 0;
+    }
+
+    /* Header Google-Style */
+    .header {
+      display: flex;
+      align-items: center;
+      padding: 16px 24px;
+      background: white;
+      border-bottom: 1px solid #e0e0e0;
+      gap: 16px;
+    }
+    .logo {
+      width: 48px;
+      height: 48px;
+    }
+    .logo img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+    .header-content {
+      flex: 1;
+    }
+    .header-title {
+      font-size: 20px;
+      font-weight: 500;
+      color: #202124;
+      margin-bottom: 4px;
+    }
+    .header-time {
+      font-size: 14px;
+      color: #5f6368;
     }
 
     .container {
-      max-width: 1100px;
-      margin: 0 auto;
+      max-width: 1000px;
+      margin: 24px auto;
+      padding: 0 24px;
     }
 
-    /* Header */
-    .header {
-      background: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(20px);
-      -webkit-backdrop-filter: blur(20px);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 20px;
+    .card {
+      background: white;
+      border-radius: 8px;
       padding: 20px;
-      margin-bottom: 28px;
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      margin-bottom: 24px;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+      border: 1px solid #e0e0e0;
     }
-    .logo {
-      width: 60px;
-      height: 60px;
-      background: #3b82f6;
-      border-radius: 12px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-weight: bold;
-      font-size: 24px;
-    }
-    .school-name {
-      font-size: 20px;
-      font-weight: 600;
-      color: #1e40af;
+    .card h2 {
+      font-size: 18px;
+      font-weight: 500;
+      margin-bottom: 16px;
+      color: #202124;
     }
 
-    /* Card Glass */
-    .glass-card {
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 16px;
-      padding: 24px;
-      margin-bottom: 28px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.12);
-    }
-    .card-title {
-      font-size: 20px;
-      font-weight: 600;
-      color: #1e40af;
-      margin-bottom: 20px;
-    }
-
-    /* Form */
     .form-group {
       margin-bottom: 16px;
     }
     label {
       display: block;
       margin-bottom: 6px;
-      font-weight: 500;
+      font-size: 14px;
+      color: #5f6368;
     }
     input, select, textarea {
       width: 100%;
       padding: 12px;
-      border: 1px solid rgba(0,0,0,0.15);
-      border-radius: 10px;
+      border: 1px solid #dadce0;
+      border-radius: 6px;
       font-size: 16px;
     }
     button {
-      width: 100%;
-      padding: 12px;
-      background: #1e40af;
+      background: #1a73e8;
       color: white;
       border: none;
-      border-radius: 10px;
-      font-weight: 600;
+      border-radius: 6px;
+      padding: 12px;
+      font-size: 16px;
+      font-weight: 500;
       cursor: pointer;
-      margin-top: 8px;
+      width: 100%;
     }
     button:hover {
-      background: #1d3557;
+      background: #1763c3;
     }
 
     /* Grid Kategori */
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+      gap: 16px;
     }
     .col {
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 14px;
+      background: #f8f9fa;
+      border: 1px solid #e0e0e0;
+      border-radius: 8px;
       padding: 16px;
     }
     .col h3 {
-      font-size: 16px;
-      font-weight: 600;
-      color: #1e40af;
+      font-size: 14px;
+      font-weight: 500;
       margin-bottom: 12px;
+      color: #202124;
     }
     .record {
-      background: rgba(255,255,255,0.2);
+      background: white;
+      border: 1px solid #e0e0e0;
+      border-radius: 6px;
       padding: 10px;
-      border-radius: 8px;
       margin-bottom: 8px;
-      font-size: 14px;
+      font-size: 13px;
     }
-    .record strong { color: #1e3a8a; }
-
-    /* Admin Button */
-    .admin-btn {
-      background: #8b5cf6;
-      margin-top: 16px;
+    .record strong {
+      display: block;
+      color: #1a73e8;
     }
-
-    .hidden { display: none; }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <!-- Header -->
-    <div class="header">
-      <div class="logo">LOGO.png</div>
-      <div class="school-name">KOLEJ VOKASIONAL KLANG</div>
+  <!-- Header Google-Style -->
+  <header class="header">
+    <div class="logo">
+      <img src="logo.png" alt="Logo KV Klang" />
     </div>
+    <div class="header-content">
+      <div class="header-title">KOLEJ VOKASIONAL KLANG</div>
+      <div class="header-time" id="currentTime">Memuatkan masa...</div>
+    </div>
+  </header>
 
-    <!-- Form Input -->
-    <div class="glass-card">
-      <h2 class="card-title">Tambah Rekod Keberadaan</h2>
+  <div class="container">
+    <div class="card">
+      <h2>Tambah Rekod Keberadaan Baharu</h2>
       <div class="form-group">
         <label>Nama Guru / Staf</label>
         <input type="text" id="nama" placeholder="Cikgu Azlin" />
@@ -175,161 +173,47 @@
         <label>Catatan</label>
         <textarea id="catatan" rows="2" placeholder="Contoh: Pengawas SPM, Mesyuarat"></textarea>
       </div>
-      <button onclick="tambahRekod()">SAVE</button>
-      <button id="exportBtn" class="admin-btn hidden">📥 Export ke Google Sheets</button>
+      <button onclick="tambahRekod()">Simpan Rekod</button>
     </div>
 
-    <!-- Paparan Data -->
-    <div class="glass-card">
-      <h2 class="card-title">Senarai Keberadaan Terkini</h2>
+    <div class="card">
+      <h2>Senarai Keberadaan Terkini</h2>
       <div class="grid" id="dataGrid">
-        <div class="col"><h3>A. Semua / Jenis Cuti</h3><div id="colA" class="records"></div></div>
-        <div class="col"><h3>B. Bertugas di Luar Sekolah</h3><div id="colB" class="records"></div></div>
-        <div class="col"><h3>C. Bertugas di Sekolah</h3><div id="colC" class="records"></div></div>
-        <div class="col"><h3>D. Aktiviti di Sekolah</h3><div id="colD" class="records"></div></div>
-        <div class="col"><h3>E. Aktiviti Luar Sekolah</h3><div id="colE" class="records"></div></div>
+        <div class="col"><h3>A. Cuti</h3><div id="colA" class="records"></div></div>
+        <div class="col"><h3>B. Luar Sekolah</h3><div id="colB" class="records"></div></div>
+        <div class="col"><h3>C. Di Sekolah</h3><div id="colC" class="records"></div></div>
+        <div class="col"><h3>D. Aktiviti Sekolah</h3><div id="colD" class="records"></div></div>
+        <div class="col"><h3>E. Aktiviti Luar</h3><div id="colE" class="records"></div></div>
       </div>
     </div>
   </div>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database-compat.js"></script>
-
   <script>
-    // 🔧 Firebase Config
-    const firebaseConfig = {
-      apiKey: "AIzaSyAhT4W6D6ueYRBvkHXrHwAKe8ooAwWfbbU",
-      authDomain: "schoolnewsystem-dfba8.firebaseapp.com",
-      databaseURL: "https://schoolnewsystem-dfba8-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "schoolnewsystem-dfba8",
-      storageBucket: "schoolnewsystem-dfba8.firebasestorage.app",
-      messagingSenderId: "913620840598",
-      appId: "1:913620840598:web:50f113ecc7be8c7df8d2b7"
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.database();
+    // Set masa semasa & kemas kini setiap saat
+    function updateClock() {
+      const now = new Date();
+      const options = { 
+        weekday: 'long', 
+        year: 'numeric', 
+        month: 'long', 
+        day: 'numeric',
+        hour: '2-digit',
+        minute: '2-digit',
+        second: '2-digit',
+        localeMatcher: 'best fit'
+      };
+      document.getElementById('currentTime').textContent = now.toLocaleDateString('ms-MY', options);
+    }
+    updateClock();
+    setInterval(updateClock, 1000);
 
     // Set tarikh hari ini
     document.getElementById('tarikh').valueAsDate = new Date();
 
-    // Semak jika admin
-    let isAdmin = false;
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        // Ambil data pengguna untuk semak role
-        firebase.database().ref('users/' + user.uid).once('value').then(snapshot => {
-          const userData = snapshot.val();
-          isAdmin = userData && userData.role === 'admin';
-          if (isAdmin) {
-            document.getElementById('exportBtn').classList.remove('hidden');
-          }
-          loadRecords();
-        });
-      } else {
-        // Jika tiada login, redirect ke login (opsional)
-        // Untuk demo, kita tetap izinkan tambah rekod tanpa login
-        loadRecords();
-      }
-    });
-
-    // Load data from Firebase
-    function loadRecords() {
-      const cols = {
-        'A': document.getElementById('colA'),
-        'B': document.getElementById('colB'),
-        'C': document.getElementById('colC'),
-        'D': document.getElementById('colD'),
-        'E': document.getElementById('colE')
-      };
-
-      for (let k in cols) {
-        cols[k].innerHTML = '<p style="text-align:center;">Memuatkan...</p>';
-      }
-
-      db.ref('keberadaan').on('value', snapshot => {
-        if (!snapshot.exists()) {
-          for (let k in cols) cols[k].innerHTML = '<p style="text-align:center;">Tiada rekod.</p>';
-          return;
-        }
-
-        const data = [];
-        snapshot.forEach(child => {
-          data.push({ id: child.key, ...child.val() });
-        });
-
-        for (let k in cols) cols[k].innerHTML = '';
-
-        data.forEach(item => {
-          if (cols[item.kategori]) {
-            const div = document.createElement('div');
-            div.className = 'record';
-            div.innerHTML = `<strong>${item.nama}</strong><br/>${item.tarikh}<br/>${item.catatan || '-'}`;
-            cols[item.kategori].appendChild(div);
-          }
-        });
-      });
-    }
-
-    // Tambah rekod
+    // Anda boleh tambah Firebase di sini jika perlu
     function tambahRekod() {
-      const nama = document.getElementById('nama').value.trim();
-      const kategori = document.getElementById('kategori').value;
-      const tarikh = document.getElementById('tarikh').value;
-      const catatan = document.getElementById('catatan').value.trim();
-
-      if (!nama || !tarikh) {
-        alert('Sila isi Nama & Tarikh.');
-        return;
-      }
-
-      db.ref('keberadaan').push({
-        nama,
-        kategori,
-        tarikh,
-        catatan,
-        timestamp: Date.now()
-      }).then(() => {
-        alert('✅ Rekod disimpan!');
-        document.getElementById('nama').value = '';
-        document.getElementById('catatan').value = '';
-      });
+      alert('Fungsi ini boleh disambungkan ke Firebase / Sheets.');
     }
-
-    // Export to Google Sheets
-    document.getElementById('exportBtn').onclick = async function() {
-      const snapshot = await db.ref('keberadaan').once('value');
-      if (!snapshot.exists()) {
-        alert('Tiada data untuk dieksport.');
-        return;
-      }
-
-      const data = [];
-      snapshot.forEach(child => {
-        data.push(child.val());
-      });
-
-      const appsScriptUrl = 'https://script.google.com/macros/s/AKfycbz2wQsGYqpibshebgzaUcFO733VvjGJHQ5tzU3P50UXDI8BFX2s6BJrz1lhC7hz9GZT/exec';
-
-      try {
-        for (const item of data) {
-          const res = await fetch(appsScriptUrl, {
-            method: 'POST',
-            mode: 'no-cors' // Apps Script memerlukan ini
-          });
-          // Dengan no-cors, kita tak boleh baca response, tapi anggap berjaya
-        }
-        alert('✅ Data berjaya diexport ke Google Sheets!');
-      } catch (err) {
-        alert('❌ Gagal export: ' + err.message);
-      }
-    };
-
-    loadRecords();
   </script>
 </body>
 </html>
